--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>{% block title %}{% endblock title %}</title>
+    <title>{% block title %}Micro E-Commerce{% endblock title %}</title>
     {% include 'base/css.html' %}
 </head>
 <body>
