--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -1,7 +1,7 @@
 <nav
-	class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-gray-900"
+	class="bg-white border-gray-200 px-2 sm:px-4  py-2.5 rounded dark:bg-gray-900"
 >
-	<div class="container flex flex-wrap items-center justify-between mx-auto">
+	<div class="container flex flex-wrap items-center  justify-between mx-auto">
 		<a href="/" class="flex items-center">
 			<span
 				class="self-center text-xl font-semibold whitespace-nowrap dark:text-white"
@@ -44,7 +44,7 @@
 
 				<li>
 					<a
-						href="#"
+						href="{% url 'product:list' %}"
 						class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
 						>Products</a
 					>
